sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: value downto is not a member of Int
    for (i<-n-1 downto 1){
                ^